# oic-i-agentic-ai-tutorials

./: .gitignore  README.md
.github/: DEPENDABOT_SETUP.md  dependabot.yml
Doc_processing_docling&WXO/: README.md  main.py  requirements.txt  table_extraction_agent.yaml
Sterling_OMS_Smart_Supply_Chain_Agent/: readme.md
a2a/: .gitignore
a2a/hr-agent-pure-a2a/: .env.example  Dockerfile  README.md  deploy.sh  hr_agent.yaml  hr_manager_agent.yaml  onboarding_agent.yaml  pyproject.toml  requirements.txt  test_agent.sh  verify_a2a.sh
a2a/hr-agent-pure-a2a/app/: __main__.py  agent.py  agent_executor.py
astra-db-graphrag/: .gitignore
bob-wxo-dev/: wxo-implementation-guide.md
bpmn/: BPMN-order-process.bpmn
confluent-agents/: .env.example  Substitute_Finder_Agent.yaml  clear_topic.py  get_sku_availability.py  produce_messages.py  product-catalog.docx  requirements.txt  setup_topic_with_samples.py  sku-availability-agent.yaml  test_mcp_client.py
crewai-external-orchestrate-agent/: .env.example  Dockerfile  app.py  requirements.txt
end-to-end-agent-use-case-implementation-with-galaxium-travels-full-local-setup-guide-and-mcp/: 2-watsonx_adk_setup.md  README.md
envizi-agent/: README.md
external-llms/: Dockerfile  deploy-llm.sh  download_model.py  requirements.txt  server.py  test_examples.sh
i-oic-agent-memory/: README.md  wxO_Memory_and_Checkpointers_Guide.md
i-oic-agent-security-red-teaming/: .env.example  README.md  get_ssn_info.py  personal_agent.yaml  privacy_guard_agent.yaml
i-oic-confluent/: .dockerignore  .gitignore  Dockerfile  README.md  (+7 more)
(+574 files in other folders)
