[project]
name = "hr-agent-pure-a2a"
version = "1.0.0"
description = "HR Agent with pure A2A Protocol for watsonx Orchestrate"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "a2a-sdk==0.3.22",
    "click>=8.1.8",
    "httpx>=0.28.1",
    "pydantic>=2.10.6",
    "python-dotenv>=1.1.0",
    "uvicorn>=0.34.2",
    "sse-starlette>=2.3.6",
    "starlette>=0.46.2",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
